     address from cached kernel routes.
   - ovs-appctl:
     * Add support for selecting the source address with the
       'ovs-appctl ovs/route/add' command.
     * New commands "dpctl/{ct-get-sweep-interval,ct-set-sweep-interval}" that
       allow to get and set, for the userspace datapath, the sweep interval
       for the conntrack garbage collector.
   - ovs-ctl:
     * Added new options --[ovsdb-server|ovs-vswitchd]-umask=MODE to set umask
       value when starting OVS daemons.  E.g., use --ovsdb-server-umask=0002
       in order to create OVSDB sockets with access mode of 0770.
   - QoS:
     * Added new configuration option 'jitter' for a linux-netem QoS type.
   - DPDK:
     * ovs-vswitchd will keep the CAP_SYS_RAWIO capability when started
       with the --hw-rawio-access command line option.  This allows the
       process extra privileges when mapping physical interconnect memory.
   - SRv6 Tunnel Protocol
     * Added support for userspace datapath (only).
   - Userspace datapath:
     * IP and L4 checksum offload support is now enabled by default for
       interfaces that support it.  See the 'status' column in the 'interface'
       table to check the status.


v3.1.0 - 16 Feb 2023
--------------------
   - ovs-vswitchd now detects changes in CPU affinity and adjusts the number
     of handler and revalidator threads if necessary.
   - AF_XDP:
     * Added support for building with libxdp and libbpf >= 0.7.
     * Support for AF_XDP is now enabled by default if all dependencies are
       available at the build time.  Use --disable-afxdp to disable.
       Use --enable-afxdp to fail the build if dependencies are not present.
   - ovs-appctl:
     * "ovs-appctl ofproto/trace" command can now display port names with the
       "--names" option.
   - OVSDB-IDL:
     * Add the support to specify the persistent uuid for row insert in both
       C and Python IDLs.
   - Windows:
     * Conntrack IPv6 fragment support.
   - DPDK: